--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,12 @@
 *.lk
 teste.bat
 info.json
-/config/admins.txt
-/config/moderators.txt
-/config/dbconfig.txt
+/code/global.dm
+/config/**/*
 /statistics
 /deletions
-/data/logs
-/data/player_saves
-/data/ban_unban_log.txt
-/data/investigate
+/data/**/*
 /tools/
-config/admins.txt
-data/banlist.bdb
 /nodejs/
 /.vscode/settings.json
 /tools/autosplit/export
