Revert "Genel dosyalar"
This reverts commit de1928f5aebb2e4aa1e234cfb13508c4a1929524.

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,18 @@
 *.lk
 teste.bat
 info.json
-/code/global.dm
-/config/**/*
+/config/admins.txt
+/config/moderators.txt
+/config/dbconfig.txt
 /statistics
 /deletions
-/data/**/*
+/data/logs
+/data/player_saves
+/data/ban_unban_log.txt
+/data/investigate
 /tools/
+config/admins.txt
+data/banlist.bdb
 /nodejs/
 /.vscode/settings.json
 /tools/autosplit/export
