--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FarwebSharp"]
 	path = FarwebSharp
-	url = https://github.com/Farrweb/FarwebSharp
+	url = https://github.com/Vandora-41/Farweb
